--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -691,6 +691,30 @@
             <trans-unit id="settings.slick.touchThreshold" xml:space="preserve">
                 <source>Touch Threshold</source>
             </trans-unit>
+            <trans-unit id="settings.slick.useCSS" xml:space="preserve">
+                <source>Enable CSS Transitions</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.useTransform" xml:space="preserve">
+                <source>Enable CSS Transform</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.variableWidth" xml:space="preserve">
+                <source>Variable Width</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.vertical" xml:space="preserve">
+                <source>Vertical slide mode</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.verticalSwiping" xml:space="preserve">
+                <source>Vertical swipe mode</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.rtl" xml:space="preserve">
+                <source>Right-to-left slider</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.waitForAnimate" xml:space="preserve">
+                <source>Wait for animate</source>
+            </trans-unit>
+            <trans-unit id="settings.slick.zindex" xml:space="preserve">
+                <source>Z-Index value for slides</source>
+            </trans-unit>
 
 		</body>
 	</file>
