--- a/Resources/Private/Language/owl_csh_flexforms.xlf
+++ b/Resources/Private/Language/owl_csh_flexforms.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2014-06-02T11:47:43Z" product-name="news">
+    <file source-language="en" datatype="plaintext" original="messages" product-name="ws_slider">
         <header/>
         <body>
             <trans-unit id="settings.js.items.description" xml:space="preserve">
