refactored, seperated and fixed errors of language files

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -15,6 +15,9 @@
 				<source>Slider</source>
 			</trans-unit>
 
+			<trans-unit id="title">
+				<source>WS Slider Settings</source>
+			</trans-unit>
 
 			<trans-unit id="settings" xml:space="preserve">
 				<source>Settings</source>
@@ -144,6 +147,12 @@
             <trans-unit id="settings.common.video" xml:space="preserve">
                 <source>Enable Video</source>
             </trans-unit>
+            <trans-unit id="settings.common.touch" xml:space="preserve">
+                <source>Enable Touch Support</source>
+            </trans-unit>
+            <trans-unit id="settings.common.animationSpeed" xml:space="preserve">
+                <source>Animation Speed</source>
+            </trans-unit>
 
             <!-- Labels -->
             <trans-unit id="pauseText" xml:space="preserve">
@@ -199,378 +208,6 @@
 			<trans-unit id="addImage" xml:space="preserve">
 				<source>Add image</source>
 			</trans-unit>
-
-
-			<!-- Owl specific labels -->
-			<trans-unit id="owl">
-				<source>Owl</source>
-			</trans-unit>
-
-
-			<trans-unit id="settings.owl.items">
-				<source>The number of items you want to see on the screen.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.margin">
-				<source>Margin-right(px) on item.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.stagePadding">
-				<source>Padding left and right on stage (can see neighbours).</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.center">
-				<source>Center item</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.mouseDrag">
-				<source>Mouse Drag</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.touchDrag">
-				<source>Touch Drag</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.pullDrag">
-				<source>Pull Drag</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.freeDrag">
-				<source>Free Drag</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.stagePadding">
-				<source>Padding left and right on stage</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.merge">
-				<source>Merge items. Looking for data-merge='{number}' inside item..</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.mergeFit">
-				<source>Fit merged items if screen is smaller than items value.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.autoWidth">
-				<source>Set non grid content. Try using width style on divs.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.startPosition">
-				<source>Start position or URL Hash string like '#id'.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.rewind">
-				<source>Go backwards when the boundary has reached.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.slideBy">
-				<source>Navigation slide by x. 'page' string can be set to slide by page.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.slideTransition">
-				<source>You can define the transition for the stage you want to use eg. linear.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.autoplayTimeout">
-				<source>Autoplay interval timeout.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.autoplayHoverPause">
-				<source>Pause on mouse hover.</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.dragEndSpeed">
-				<source>Drag end speed</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.mouseDrag">
-				<source>Mouse drag enabled</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.lazyLoadEager">
-				<source>Eager Lazy Load</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.smartSpeed">
-				<source>Smart Speed</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.videoHeight">
-				<source>Video Height</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.videoWidth">
-				<source>Video Width</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.fallbackEasing">
-				<source>Easing fallback animation for CSS2</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.nestedItemSelector">
-				<source>Nested Item Selector</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.itemElement">
-				<source>Item Element</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.stageElement">
-				<source>Stage Element</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.navContainer">
-				<source>Nav Container</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.navSpeed">
-				<source>Nav Speed</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.nav">
-				<source>Show Nav Buttons</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.dotsContainer">
-				<source>Dots Container</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.dots">
-				<source>Show navigation dots</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.dotsEach">
-				<source>Show dots each x item</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.dotsSpeed">
-				<source>Dots Speed</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.checkVisible">
-				<source>Check Visible</source>
-			</trans-unit>
-			<trans-unit id="settings.owl.responsiveRefreshRate">
-				<source>Responsive Refresh Rate</source>
-			</trans-unit>
-
-            <!-- tinyslider specific settings -->
-            <trans-unit id="settings.tinySlider.mode" xml:space="preserve">
-                <source>Mode</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.axis" xml:space="preserve">
-                <source>Axis</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.items" xml:space="preserve">
-                <source>Items</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.gutter" xml:space="preserve">
-                <source>Gutter</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.edgePadding" xml:space="preserve">
-                <source>Edge Padding</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.fixedWidth" xml:space="preserve">
-                <source>Fixed Width</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoWidth" xml:space="preserve">
-                <source>Auto Width</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.viewportMax" xml:space="preserve">
-                <source>Viewport Maximum</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.slideBy" xml:space="preserve">
-                <source>Slide By</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.center" xml:space="preserve">
-                <source>Center</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.controls" xml:space="preserve">
-                <source>Control Buttons</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.controlsPosition" xml:space="preserve">
-                <source>Control Buttons Position</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.controlsContainer" xml:space="preserve">
-            	<source>Control Buttons Container</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.customPrevButton" xml:space="preserve">
-                <source>Custom Previous-Button</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.customNextButton" xml:space="preserve">
-               	<source>Custom Next-Button</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.nav" xml:space="preserve">
-               	<source>Nav Components</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.navPosition" xml:space="preserve">
-               	<source>Nav Components Position</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.navContainer" xml:space="preserve">
-               	<source>Nav Components Container</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.navAsThumbnails" xml:space="preserve">
-               	<source>Nav As Thumbnails</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.arrowKeys" xml:space="preserve">
-               	<source>Arrow Keys</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoplayPosition" xml:space="preserve">
-               	<source>Autoplay Position</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoplayTimeout" xml:space="preserve">
-               	<source>Autoplay time between slide changes</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoplayDirection" xml:space="preserve">
-               	<source>Autoplay Direction</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoplayHoverPause" xml:space="preserve">
-               	<source>Pause autoplay on hover</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoplayButtonOutput" xml:space="preserve">
-               	<source>Autoplay Button Output</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.autoplayResetOnVisibility" xml:space="preserve">
-               	<source>Pause autoplay when page is invisible</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.animateNormal" xml:space="preserve">
-               	<source>Normal Animation</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.animateDelay" xml:space="preserve">
-               	<source>Animation Delay</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.rewind" xml:space="preserve">
-               	<source>Rewind</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.lazyloadSelector" xml:space="preserve">
-               	<source>CSS selector for lazyload images</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.mouseDrag" xml:space="preserve">
-               	<source>Mouse Drag</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.swipeAngle" xml:space="preserve">
-               	<source>Swipe Angle</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.preventActionWhenRunning" xml:space="preserve">
-               	<source>Prevent next transition while slider is transforming</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.preventScrollOnTouch" xml:space="preserve">
-               	<source>Prevent page from scrolling on touch</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.nested" xml:space="preserve">
-               	<source>Nested</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.freezable" xml:space="preserve">
-               	<source>Freezable</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.disable" xml:space="preserve">
-               	<source>Disable</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.startIndex" xml:space="preserve">
-               	<source>Start Index</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.onInit" xml:space="preserve">
-               	<source>Callback to be run on initialization</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.useLocalStorage" xml:space="preserve">
-               	<source>Use Local Storage</source>
-            </trans-unit>
-            <trans-unit id="settings.tinySlider.nonce" xml:space="preserve">
-               	<source>Nonce Attribute</source>
-            </trans-unit>
-
-            <!-- slick slider -->
-            <trans-unit id="settings.slick.accessibility" xml:space="preserve">
-                <source>Accessibility</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.arrows" xml:space="preserve">
-                <source>Arrows</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.asNavFor" xml:space="preserve">
-                <source>As Nav For</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.appendArrows" xml:space="preserve">
-                <source>Append Arrows</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.appendDots" xml:space="preserve">
-                <source>Append Dots</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.prevArrow" xml:space="preserve">
-                <source>Prev Arrow</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.nextArrow" xml:space="preserve">
-                <source>Next Arrow</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.centerMode" xml:space="preserve">
-                <source>Center Mode</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.centerPadding" xml:space="preserve">
-                <source>Center Padding</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.cssEase" xml:space="preserve">
-                <source>CSS3 animation Easing</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.customPaging" xml:space="preserve">
-                <source>Custom Paging</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.dots" xml:space="preserve">
-                <source>Dots</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.dotsClass" xml:space="preserve">
-                <source>Dots Class</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.draggable" xml:space="preserve">
-                <source>Draggable</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.fade" xml:space="preserve">
-                <source>Fade</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.focusOnSelect" xml:space="preserve">
-                <source>Focus On Select</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.easing" xml:space="preserve">
-                <source>Easing</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.edgeFriction" xml:space="preserve">
-                <source>Edge Friction</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.infinite" xml:space="preserve">
-                <source>Infinite</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.initialSlide" xml:space="preserve">
-                <source>Initial Slide</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.mobileFirst" xml:space="preserve">
-                <source>Mobile First</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.pauseOnFocus" xml:space="preserve">
-                <source>Pause on focus</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.pauseOnHover" xml:space="preserve">
-                <source>Pause on hover</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.pauseOnDotsHover" xml:space="preserve">
-                <source>Pause on Dots hover</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.respondTo" xml:space="preserve">
-                <source>Respond To</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.rows" xml:space="preserve">
-                <source>Rows</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.slidesPerRow" xml:space="preserve">
-                <source>Slides per row</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.slidesToShow" xml:space="preserve">
-                <source>Slides to show</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.slidesToScroll" xml:space="preserve">
-                <source>Slides to Scroll</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.speed" xml:space="preserve">
-                <source>Slide/Fade animation speed</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.swipe" xml:space="preserve">
-                <source>Enable swiping</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.swipeToSlide" xml:space="preserve">
-                <source>Swipe to slide</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.touchMove" xml:space="preserve">
-                <source>Touch Move</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.touchThreshold" xml:space="preserve">
-                <source>Touch Threshold</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.useCSS" xml:space="preserve">
-                <source>Enable CSS Transitions</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.useTransform" xml:space="preserve">
-                <source>Enable CSS Transform</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.variableWidth" xml:space="preserve">
-                <source>Variable Width</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.vertical" xml:space="preserve">
-                <source>Vertical slide mode</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.verticalSwiping" xml:space="preserve">
-                <source>Vertical swipe mode</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.rtl" xml:space="preserve">
-                <source>Right-to-left slider</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.waitForAnimate" xml:space="preserve">
-                <source>Wait for animate</source>
-            </trans-unit>
-            <trans-unit id="settings.slick.zindex" xml:space="preserve">
-                <source>Z-Index value for slides</source>
-            </trans-unit>
 
 		</body>
 	</file>
