--- a/Resources/Private/Language/flexslider_csh_flexforms.xlf
+++ b/Resources/Private/Language/flexslider_csh_flexforms.xlf
@@ -4,122 +4,122 @@
         <header/>
         <body>
             <!-- general Flexslider options -->
-            <trans-unit id="settings.js.selector.description" xml:space="preserve">
+            <trans-unit id="flexslider.settings.js.selector.description" xml:space="preserve">
 				<source>Must match a simple pattern. '{container} > {slide}'.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.animation.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.animation.description" xml:space="preserve">
 				<source>Controls the animation type, "fade" or "slide".</source>
 			</trans-unit>
-			<trans-unit id="settings.js.easing.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.easing.description" xml:space="preserve">
 				<source>Determines the easing method used in jQuery transitions.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.direction.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.direction.description" xml:space="preserve">
 				<source>Controls the animation direction, "horizontal" or "vertical"</source>
 			</trans-unit>
-			<trans-unit id="settings.js.reverse.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.reverse.description" xml:space="preserve">
 				<source>Reverse the animation direction.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.animationLoop.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.animationLoop.description" xml:space="preserve">
 				<source>Gives the slider a seamless infinite loop.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.smoothHeight.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.smoothHeight.description" xml:space="preserve">
 				<source>Animate the height of the slider smoothly for slides of varying height.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.startAt.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.startAt.description" xml:space="preserve">
 				<source>The starting slide for the slider, in array notation.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.slideshow.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.slideshow.description" xml:space="preserve">
 				<source>Setup a slideshow for the slider to animate automatically.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.slideshowSpeed.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.slideshowSpeed.description" xml:space="preserve">
 				<source>Set the speed of the slideshow cycling, in milliseconds.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.animationSpeed.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.animationSpeed.description" xml:space="preserve">
 				<source>Set the speed of animations, in milliseconds.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.initDelay.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.initDelay.description" xml:space="preserve">
 				<source>Set an initialization delay, in milliseconds.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.randomize.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.randomize.description" xml:space="preserve">
 				<source>Randomize slide order, on load.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.fadeFirstSlide.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.fadeFirstSlide.description" xml:space="preserve">
 				<source>Fade in animation on the first slide.</source>
 			</trans-unit>
 
             <!-- Usability Features -->
-			<trans-unit id="settings.js.pauseOnAction.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.pauseOnAction.description" xml:space="preserve">
 				<source>Pause the slideshow when interacting with control elements.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.pauseOnHover.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.pauseOnHover.description" xml:space="preserve">
 				<source>Pause the slideshow when hovering over slider, then resume when no longer hovering.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.pauseInvisible.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.pauseInvisible.description" xml:space="preserve">
 				<source>Pause Invisible</source>
 			</trans-unit>
-			<trans-unit id="settings.js.useCSS.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.useCSS.description" xml:space="preserve">
 				<source>Slider will use CSS3 transitions, if available.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.touch.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.touch.description" xml:space="preserve">
 				<source>Allow touch swipe navigation of the slider on enabled devices.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.video.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.video.description" xml:space="preserve">
 				<source>Will prevent use of CSS3 3D Transforms, avoiding graphical glitches when there is video in the slider.</source>
 			</trans-unit>
 
             <!-- Primary Controls -->
-			<trans-unit id="settings.js.controlNav.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.controlNav.description" xml:space="preserve">
 				<source>Create navigation for paging control of each slide.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.directionNav.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.directionNav.description" xml:space="preserve">
 				<source>Create previous/next arrow navigation.</source>
 			</trans-unit>
 
             <!-- Secondary Navigation -->
-			<trans-unit id="settings.js.keyboard.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.keyboard.description" xml:space="preserve">
 				<source>Allow slider navigating via keyboard left/right keys.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.multipleKeyboard.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.multipleKeyboard.description" xml:space="preserve">
 				<source>Allow keyboard navigation to affect multiple sliders.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.mousewheel.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.mousewheel.description" xml:space="preserve">
 				<source>(Dependency) Allows slider navigating via mousewheel</source>
 			</trans-unit>
-			<trans-unit id="settings.js.pausePlay.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.pausePlay.description" xml:space="preserve">
 				<source>Create pause/play element to control slider slideshow.</source>
 			</trans-unit>
 
             <!-- Special Properties -->
-			<trans-unit id="settings.js.controlsContainer.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.controlsContainer.description" xml:space="preserve">
 				<source>jQuery Object/Selector. Container the navigation elements should be appended to.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.manualControls.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.manualControls.description" xml:space="preserve">
 				<source>jQuery Object/Selector. Define element to be used in lieu of dynamic controlNav.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.customDirectionNav.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.customDirectionNav.description" xml:space="preserve">
 				<source>jQuery Object/Selector. Container the custom navigation markup works with.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.sync.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.sync.description" xml:space="preserve">
 				<source>Selector. Mirror the actions performed on this slider with another slider.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.asNavFor.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.asNavFor.description" xml:space="preserve">
 				<source>Selector. Turn the slider into a thumbnail navigation for another slider.</source>
 			</trans-unit>
 
             <!-- Carousel Options -->
-            <trans-unit id="settings.js.itemWidth.description" xml:space="preserve">
+            <trans-unit id="flexslider.settings.js.itemWidth.description" xml:space="preserve">
 				<source>Box-model width of individual carousel items, including horizontal borders and padding.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.itemMargin.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.itemMargin.description" xml:space="preserve">
 				<source>Margin between carousel items.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.minItems.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.minItems.description" xml:space="preserve">
 				<source>Minimum number of carousel items that should be visible.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.maxItems.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.maxItems.description" xml:space="preserve">
 				<source>Maximum number of carousel items that should be visible.</source>
 			</trans-unit>
-			<trans-unit id="settings.js.move.description" xml:space="preserve">
+			<trans-unit id="flexslider.settings.js.move.description" xml:space="preserve">
 				<source>Number of carousel items that should move on animation.</source>
 			</trans-unit>
         </body>
